Archive2/88/10a157b825f9f8/output
main.cpp:8:31: error: in-class initialization of static data member ‘const char test::bar []’ of incomplete type
     static const char bar[] = "bar";
                               ^
