Archive2/88/10a157b825f9f8/main.cpp
#include <string>

static const char foo[] = "foo";


struct test {
    static const int x = 42;
    static const char bar[] = "bar";
};


int main(){
}